@startuml diagrama-de-classe-v1
' Diagrama de Classes - E-commerce Completo com Cardinalidade

package "Usuário" {
  class Usuario {
    - id: int
    - nome: String
    - email: String
    - senha: String
    + login(): boolean
    + logout(): void
    + atualizarPerfil(): void
  }
  
  class Administrador {
    + adicionarProduto(p: Produto): void
    + removerProduto(p: Produto): void
    + atualizarEstoque(p: Produto, qtd: int): void
  }
  
  class Cliente {
    - endereco: String
    - numeroTelefone: String
    + adicionarAoCarrinho(p: Produto): void
    + fazerPedido(): Pedido
  }
}

package "Produto e Estoque" {
  class Produto {
    - id: int
    - nome: String
    - descricao: String
    - preco: double
    - estoque: int
    - categoria: String
    + atualizarEstoque(qtd: int): void
    + aplicarDesconto(percentual: double): void
  }
}

package "Carrinho e Pedido" {
  class Carrinho {
    - id: int
    - itens: List<ItemCarrinho>
    - total: double
    + adicionarItem(p: Produto, qtd: int): void
    + removerItem(p: Produto): void
    + calcularTotal(): double
    + esvaziar(): void
  }
  
  class ItemCarrinho {
    - produto: Produto
    - quantidade: int
    + subtotal(): double
  }

  class ItemPedido {
      - id: String
      - produto: Produto
      - quantidade: int
      - precoUnitario: double
      + subtotal(): double
    }
  
  class Pedido {
    - id: int
    - data: Data
    - status: String
    - total: double
    - cliente: Cliente
    - pagamento: Pagamento
    - envio: Envio
    - itens: List<ItemPedido>
    + cancelar(): void
    + atualizarStatus(s: String): void
  }
}

package "Pagamento e Envio" {
  class Pagamento {
    - id: int
    - dadosPagamento: Data
    - valor: double
    - metodo: String
    - status: String
    + processar(): boolean
  }
  
  class Envio {
    - id: int
    - enderecoEntrega: String
    - dataEnvio: Data
    - status: String
    + rastrear(): String
  }
}

' Relações de Herança
Usuario <|-- Administrador
Usuario <|-- Cliente

' Relações com Cardinalidade
Cliente "1" --> "1" Carrinho
Carrinho "1" --> "0..*" ItemCarrinho
ItemCarrinho "1" --> "1" Produto
Cliente "1" --> "0..*" Pedido
Pedido "1" --> "1" Pagamento
Pedido "1" --> "1" Envio
Pedido "1" --> "0..*" ItemPedido
ItemPedido "1" --> "1" Produto

@enduml
